# job-scraper

./: .gitignore  README.md  docker-compose.yml  indeed.txt  pyproject.toml  scraper.py
app/: scraper.py
src/: main.py
src/app/: streamlit_app.py
src/modules/: offer.py  scraper.py
